<resources>
    <string name="app_name">TripNetra</string>
    <string name="soldout">Sold Out</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="nocancel">No Cancellation For Trust Rooms</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Roomterms"><![CDATA[<font color=\'#000\'>By clicking the Proceed button you agree to the</font><font color=\'#06aae4\'> Terms and Conditions</font>]]></string>
    <string name="search">Search</string>
    <string name="places_near_me">Near Me</string>
    <string name="title_activity_current_location">Map</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="total_price">Total Price</string>
    <string name="placeimage">placeimage</string>
    <string name="book_accomodation">Book Accommodation</string>
    <string name="timings">Timings</string>
    <string name="events">Events</string>
    <string name="_9393939150">+91 9393939150</string>
    <string name="tour_terms">● Prior to 30 days or more of arrival – 10% of tour cost \n●  Between 30 -15 Days prior of arrival – 25% of tour cost
        \n●  Between 14 -07 Days prior of arrival – 50% of tour cost
        \n●  Between 07- 04 Days prior of arrival – 75% of tour cost
        \n●  In case of cancellation within 3 days of arrival date it will be considered as NO SHOW and there will be 100% cancellation charged of total amount of tour package cost</string>
    <string name="tour_cancltns">●  Price mentioned is for one family ie. 2 adults + 2 children (under 15 years).
        \n●  Check in/Out time is 12Noon. For Early Check in do check with our support
        \n●  Bookings are subject to availability with the hotel.
        \n●  Service Tax extra (as applicable).
        \n●  Package rates are subject to change without prior notice.
        \n●  Package cancellations &amp; amendments will be done as per hotel policy.
        \n●  The guest must carry photo identification like Aadhaar Card/Passport/Driving License/Voter ID Card/Ration Card.</string>
    <string name="offer">Offer</string>
    <string name="remove">Remove</string>
    <string name="have_a_coupon_code">Have a Coupon Code ?</string>
    <string name="apply">APPLY</string>
    <string name="please_enter_a_valid_coupon">Please Enter A Valid Coupon</string>
    <string name="traveler_details">Traveler Details</string>
    <string name="use_login_details">Use Login Details</string>
    <string name="expected_check_in_time">Expected Check-In Time</string>
    <string name="select_a_time_range">Select A Time Range</string>
    <string name="tariff_details">Tariff Details</string>
    <string name="grand_total">Grand Total</string>
    <string name="proceed">Proceed</string>
    <string name="base_fare">Hotel Charges</string>
    <string name="coupon_discount">Coupon Discount (-)</string>
    <string name="sub_total">Sub Total</string>
    <string name="service_charge">Service Charge</string>
    <string name="select_from_location">Select From Location</string>
    <string name="select_to_location">Select To Location</string>
    <string name="my_profile">My Profile</string>
    <string name="refer_and_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_bookings">My Bookings</string>
    <string name="refer_friends">Now refer any of your friends and Get</string>
    <string name="_100">₹ 100</string>
    <string name="per_referral">per referral</string>
    <string name="share_your_referral_code">Share Your Referral Code</string>
    <string name="via">------------ via ------------</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="gmail">Gmail</string>
    <string name="messenger">Messenger</string>
    <string name="more">More</string>
    <string name="your_unique_referral_code">Your Unique Referral Code</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="total_savings">Total Savings :</string>
    <string name="logoimage">logoImage</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="helpline_no">Helpline No :</string>
    <string name="booking_date_amp_time"><![CDATA[Booking date & Time :]]></string>
    <string name="_8500898000_9393939510">+91 8500898000,\n+91 9393939510</string>
    <string name="tnetramobile">8500898000</string>
    <string name="booking_id">Booking Id :</string>
    <string name="booking_status">Booking Status :</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="booking_details">Booking Details</string>
    <string name="name">Name</string>
    <string name="room_type">Room Type</string>
    <string name="check_in_date">Check-in Date</string>
    <string name="check_in_time">Check-in Time</string>
    <string name="check_out_date">Check-out Date</string>
    <string name="no_of_rooms">No. of Rooms</string>
    <string name="no_of_guests">No. of Guests</string>
    <string name="no_of_nights">No. of Nights</string>
    <string name="no_of_extra_beds">No. of Extra Beds</string>
    <string name="price">Price</string>
    <string name="trip_address">202, Ecco Greens Park Upadhyaya Nagar,Akkaram Palli Tirupati - 517501, Tel: +91 8500898000 \nE-mail : info@tripnetra.com</string>
    <string name="car_details">Car Details</string>
    <string name="car_name">Car Name</string>
    <string name="car_type">Car Type</string>
    <string name="car_company">Car Company</string>
    <string name="capacity">Capacity</string>
    <string name="doors">Doors</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="pickup_city">Pickup City</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="tour_details">Tour Details</string>
    <string name="package_name">Package Name</string>
    <string name="city">City</string>
    <string name="travel_date">Travel Date</string>
    <string name="partial_price">Partial Price</string>
    <string name="balance_price">Balance Price</string>
    <string name="terms_and_condition"><![CDATA[Terms & Condition]]></string>
    <string name="charges_of_cancel">Charges of Cancellation</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="check_in">CHECK - IN</string>
    <string name="check_out">CHECK- OUT</string>
    <string name="login_now">Login Now!</string>
    <string name="new_to_tripnetra">New to TripNetra..?</string>
    <string name="sign_up">SIGN - UP</string>
    <string name="email_mobile_number">Email / Mobile Number</string>
    <string name="sign_in">Sign - In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="send_mail">Send Mail</string>
    <string name="create_an_account">Create an Account</string>
    <string name="signup_now">Signup Now!</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="referral_code_optional">Referral Code (Optional)</string>
    <string name="signup_terms"><![CDATA[By signing up, you agree to the Terms & Conditions]]></string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="waiting_for_otp">Waiting For OTP</string>
    <string name="my_account">My Account</string>
    <string name="all_bookings">All Bookings</string>
    <string name="tour_bookings">Tour Bookings</string>
    <string name="car_bookings">Car Bookings</string>
    <string name="hotel_bookings">Hotel Bookings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="journey_date">Journey Date</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="billing_details">Billing Details</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="choose_payment_mode">Choose Payment Mode</string>
    <string name="payu">PayU</string>
    <string name="paytm">Paytm</string>
    <string name="something_wrong">Something Went Wrong Try Again</string>
    <string name="error_occur">Error Occurred Please Try Again</string>
    <string name="remnd_places">Recommended Hotel Destinations</string>
    <string name="select_hotel_or_location">Select Hotel or Location</string>
    <string name="nights">Nights</string>
    <string name="rooms">Rooms</string>
    <string name="adults">Adults</string>
    <string name="childs">Childs</string>
    <string name="applicable_on">Applicable On</string>
    <string name="valid_till">Valid Till</string>
    <string name="promo_code">Promo Code</string>
    <string name="tap_on_code_to_copy">Tap On Code to Copy</string>
    <string name="sort_by">Sort By</string>
    <string name="filters">Filters</string>
    <string name="write_your_review">WRITE YOUR REVIEW</string>
    <string name="enter_name">Enter Name</string>
    <string name="star_symbol">*</string>
    <string name="booking_number">Booking Number</string>
    <string name="enter_booking_number">Enter Booking Number</string>
    <string name="rating">Rating</string>
    <string name="service">Service</string>
    <string name="quality">Quality</string>
    <string name="facilities">Facilities</string>
    <string name="condition">Condition</string>
    <string name="review">Review</string>
    <string name="submit">Submit</string>
    <string name="select_rooms">SELECT ROOMS</string>
    <string name="select_extra_bed">Select Extra Bed</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="book">Book</string>
    <string name="call">Call</string>
    <string name="tour_date">Tour Date</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="package_details">Package Details</string>
    <string name="actual_price">Actual Price</string>
    <string name="book_your_best_holiday_npackages">Book your Best Holiday Packages</string>
    <string name="enter_your_destination">Enter Your Destination</string>
    <string name="select_date">Select Date</string>
    <string name="welcome">Welcome</string>
    <string name="get_cheap_hotels_text">Get cheap and best deals on Hotel, Cab and Tour Package bookings at Tripnetra</string>
    <string name="arrow_symbol"><![CDATA[->]]></string>
    <string name="minus_symbol">–</string>
    <string name="plus_symbol">+</string>
    <string name="done">Done</string>
    <string name="above_10_years">Above 10 Years</string>
    <string name="below_10_years">Below 10 Years</string>
    <string name="price_range">Price Range</string>
    <string name="min_price">Min Price</string>
    <string name="_0">0</string>
    <string name="max_price">Max Price</string>
    <string name="_50000">50000</string>
    <string name="enter_old_password">Enter old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="a_z">A - Z</string>
    <string name="z_a">Z - A</string>
    <string name="low_to_high">Low To High</string>
    <string name="high_to_low">High To Low</string>
    <string name="password">Password</string>
</resources>