<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/load1"
        android:contentDescription="@string/logoimage"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textSize="25sp"
        android:textColor="#515151"
        android:textStyle="bold"
        android:gravity="center"/>

    <include layout="@layout/login_card_view"/>

    <LinearLayout
        android:id="@+id/llout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_tripnetra"
            android:layout_marginEnd="5dp"
            android:textColor="#919191"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>

