<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/refer_and_earn"
            android:textSize="50sp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/refer_friends"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_100"
            android:textSize="41sp"
            android:layout_marginTop="-8dp"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/per_referral"
            android:layout_marginTop="-8dp"
            android:textSize="13sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/referscolor"
            android:contentDescription="@string/per_referral"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="#95cacaca" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_your_referral_code"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/via"
            android:gravity="center|top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="sharewhats"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/whatsapp"
                    android:contentDescription="@string/whatsapp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="sharegmail"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/gmail"
                    android:contentDescription="@string/gmail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmail"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="sharemsgr"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/msngr"
                    android:contentDescription="@string/messenger"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messenger"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="shareall"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/more"
                    android:contentDescription="@string/more"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="#95cacaca" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_unique_referral_code"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:id="@+id/codetv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:textSize="41sp"
            android:textColor="@android:color/holo_green_dark"/>

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:textColor="@color/colorPrimary"
            android:text="@string/terms_and_conditions"/>

    </LinearLayout>

</ScrollView>